# sccca

./: format.sh  pyproject.toml
sccca/: __init__.py  legacy.py  models.py  plot.py  tp.py  utils.py
tests/: test_utils.py
